# Hanane_Qiscord

./: .gitignore  README.md  bot_token.py  main.py  pylint.conf  pyproject.toml
.github/workflows/: pylint.yml
database/: test.json
src/: bind.py
src/maimai_dx/: __init__.py  b50.py  get_score.py  query.py  types.py
